--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,29 +1,27 @@
 ---
-- name: Drop-In Directory
-  file:
-    path: /etc/systemd/system/docker.service.d
-    state: directory
-    mode: 0755
-  tags: docker
+- include_tasks: setup-RedHat.yml
+  when: ansible_os_family == 'RedHat'
 
-- name: Drop-In Flannel
-  template:
-    src: 40-flannel.conf.j2
-    dest: /etc/systemd/system/docker.service.d/40-flannel.conf
-    mode: 0644
-  notify:
-  - docker_systemd
-  tags: docker_dropin
+- include_tasks: setup-Debian.yml
+  when: ansible_os_family == 'Debian'
 
-- name: CNI Configuration Directory
-  file:
-    path: /etc/kubernetes/cni
-    state: directory
-    recurse: true
+- name: Install Docker.
+  package:
+    name: "{{ docker_package }}"
+    state: "{{ docker_package_state }}"
+  notify: restart docker
 
-- name: CNI Configuration
-  template:
-    src: docker_opts_cni.env.j2
-    dest: /etc/kubernetes/cni/docker_opts_cni.env
-    mode: 0644
-  tags: docker_cni
+- name: Ensure Docker is started and enabled at boot.
+  service:
+    name: docker
+    state: "{{ docker_service_state }}"
+    enabled: "{{ docker_service_enabled }}"
+
+- name: Ensure handlers are notified now to avoid firewall conflicts.
+  meta: flush_handlers
+
+- include_tasks: docker-compose.yml
+  when: docker_install_compose
+
+- include_tasks: docker-users.yml
+  when: docker_users
