--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,7 @@ docker_apt_ignore_key_error: True
 
 # Used only for RedHat/CentOS/Fedora.
 docker_yum_repo_url: https://download.docker.com/linux/{{ (ansible_distribution == "Fedora") | ternary("fedora","centos") }}/docker-{{ docker_edition }}.repo
+docker_yum_repo_enable: 1
 docker_yum_repo_enable_edge: 0
 docker_yum_repo_enable_test: 0
 
