--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -7,6 +7,8 @@
     - docker
     - docker-common
     - docker-engine
+  when:
+    - docker_remove_old_version
 
 - name: Add Docker GPG key.
   rpm_key:
