--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,8 @@ docker_edition: 'ce'
 docker_package: "docker-{{ docker_edition }}"
 docker_package_state: present
 docker_remove_old_version: true
+docker_pip_package: [ docker ]
+docker_pip_package_state: present
 
 # Service options.
 docker_service_state: started
